--- a/scss/includes/_variables.scss
+++ b/scss/includes/_variables.scss
@@ -29,17 +29,12 @@ $reflex-columns: 12 !default; // number of columns
 
 // Breakpoints
 // -------------------------
-$reflex-xs: 576px !default;
-$reflex-sm: 768px !default;
-$reflex-md: 992px !default;
-$reflex-lg: 1200px !default;
-$reflex-xlg: 1600px !default;
-
-$reflex-xxs-max: ($reflex-xs - 1);
-$reflex-xs-max: ($reflex-sm - 1);
-$reflex-sm-max: ($reflex-md - 1);
-$reflex-md-max: ($reflex-lg - 1);
-$reflex-lg-max: ($reflex-xlg - 1);
+$reflex-breakpoints: (
+  mobile: 320px,
+  tablet: 768px,
+  desktop: 1024px,
+  wide: 1296px,
+) !default;
 
 // Spacing
 // -------------------------
