--- a/scss/includes/_variables.scss
+++ b/scss/includes/_variables.scss
@@ -30,10 +30,11 @@ $reflex-columns: 12 !default; // number of columns
 // Breakpoints
 // -------------------------
 $reflex-breakpoints: (
-  mobile: 320px,
-  tablet: 768px,
-  desktop: 1024px,
-  wide: 1296px,
+  xs: 576px,
+  sm: 768px,
+  md: 992px,
+  lg: 1200px,
+  xlg: 1600px,
 ) !default;
 
 // Spacing
@@ -44,14 +45,9 @@ $reflex-grid-spacing: 15px !default;
 :root {
   --reflex-columns: #{ $reflex-columns };
   --reflex-grid-spacing: #{ $reflex-grid-spacing };
-  --reflex-xs: #{ $reflex-xs };
-  --reflex-sm: #{ $reflex-sm };
-  --reflex-md: #{ $reflex-md };
-  --reflex-lg: #{ $reflex-lg };
-  --reflex-xlg: #{ $reflex-xlg };
-  --reflex-xxs-max: #{ $reflex-xxs-max };
-  --reflex-xs-max: #{ $reflex-xs-max };
-  --reflex-sm-max: #{ $reflex-sm-max };
-  --reflex-md-max: #{ $reflex-md-max };
-  --reflex-lg-max: #{ $reflex-lg-max };
+
+  @each $point, $val in $reflex-breakpoints {
+    --reflex-#{$point}: #{$val};
+    --reflex-#{$point}-max: #{$val - 1};
+  }
 }
