--- a/css/reflex.css
+++ b/css/reflex.css
@@ -1,16 +1,18 @@
 :root {
   --reflex-columns: 12;
   --reflex-grid-spacing: 15px;
+  --reflex-xxs: 0;
+  --reflex-map-get-prev((xxs: 0, xs: 576px, sm: 768px, md: 992px, lg: 1200px, xlg: 1600px), xxs, -1)-max: -1;
   --reflex-xs: 576px;
-  --reflex-xs-max: 575px;
+  --reflex-map-get-prev((xxs: 0, xs: 576px, sm: 768px, md: 992px, lg: 1200px, xlg: 1600px), xs, 575px)-max: 575px;
   --reflex-sm: 768px;
-  --reflex-sm-max: 767px;
+  --reflex-map-get-prev((xxs: 0, xs: 576px, sm: 768px, md: 992px, lg: 1200px, xlg: 1600px), sm, 767px)-max: 767px;
   --reflex-md: 992px;
-  --reflex-md-max: 991px;
+  --reflex-map-get-prev((xxs: 0, xs: 576px, sm: 768px, md: 992px, lg: 1200px, xlg: 1600px), md, 991px)-max: 991px;
   --reflex-lg: 1200px;
-  --reflex-lg-max: 1199px;
+  --reflex-map-get-prev((xxs: 0, xs: 576px, sm: 768px, md: 992px, lg: 1200px, xlg: 1600px), lg, 1199px)-max: 1199px;
   --reflex-xlg: 1600px;
-  --reflex-xlg-max: 1599px;
+  --reflex-map-get-prev((xxs: 0, xs: 576px, sm: 768px, md: 992px, lg: 1200px, xlg: 1600px), xlg, 1599px)-max: 1599px;
 }
 
 .container,
@@ -29,6 +31,12 @@
 .container-full .grid {
   margin-right: -15px;
   margin-left: -15px;
+}
+
+@media (min-width: 0) {
+  .container {
+    max-width: 0;
+  }
 }
 
 @media (min-width: 576px) {
@@ -180,6 +188,57 @@
 .col-1 {
   width: 8.33333333%;
   *width: 8.23333333%;
+}
+
+@media (min-width: 0) {
+  .col-xxs-12 {
+    width: 100%;
+    *width: 99.9%;
+  }
+  .col-xxs-11 {
+    width: 91.66666667%;
+    *width: 91.56666667%;
+  }
+  .col-xxs-10 {
+    width: 83.33333333%;
+    *width: 83.23333333%;
+  }
+  .col-xxs-9 {
+    width: 75%;
+    *width: 74.9%;
+  }
+  .col-xxs-8 {
+    width: 66.66666667%;
+    *width: 66.56666667%;
+  }
+  .col-xxs-7 {
+    width: 58.33333333%;
+    *width: 58.23333333%;
+  }
+  .col-xxs-6 {
+    width: 50%;
+    *width: 49.9%;
+  }
+  .col-xxs-5 {
+    width: 41.66666667%;
+    *width: 41.56666667%;
+  }
+  .col-xxs-4 {
+    width: 33.33333333%;
+    *width: 33.23333333%;
+  }
+  .col-xxs-3 {
+    width: 25%;
+    *width: 24.9%;
+  }
+  .col-xxs-2 {
+    width: 16.66666667%;
+    *width: 16.56666667%;
+  }
+  .col-xxs-1 {
+    width: 8.33333333%;
+    *width: 8.23333333%;
+  }
 }
 
 @media (min-width: 576px) {
@@ -444,6 +503,15 @@
   width: auto;
 }
 
+@media (min-width: 0) {
+  .col-xxs-auto {
+    -ms-flex: 1 0 auto;
+    -webkit-flex: 1 0 0px;
+    flex: 1 0 0px;
+    width: auto;
+  }
+}
+
 @media (min-width: 576px) {
   .col-xs-auto {
     -ms-flex: 1 0 auto;
@@ -565,6 +633,74 @@
   -ms-flex-order: 0;
   -webkit-order: 0;
   order: 0;
+}
+
+@media only screen and (min-width: 0) {
+  .order-xxs-12 {
+    -ms-flex-order: 12;
+    -webkit-order: 12;
+    order: 12;
+  }
+  .order-xxs-11 {
+    -ms-flex-order: 11;
+    -webkit-order: 11;
+    order: 11;
+  }
+  .order-xxs-10 {
+    -ms-flex-order: 10;
+    -webkit-order: 10;
+    order: 10;
+  }
+  .order-xxs-9 {
+    -ms-flex-order: 9;
+    -webkit-order: 9;
+    order: 9;
+  }
+  .order-xxs-8 {
+    -ms-flex-order: 8;
+    -webkit-order: 8;
+    order: 8;
+  }
+  .order-xxs-7 {
+    -ms-flex-order: 7;
+    -webkit-order: 7;
+    order: 7;
+  }
+  .order-xxs-6 {
+    -ms-flex-order: 6;
+    -webkit-order: 6;
+    order: 6;
+  }
+  .order-xxs-5 {
+    -ms-flex-order: 5;
+    -webkit-order: 5;
+    order: 5;
+  }
+  .order-xxs-4 {
+    -ms-flex-order: 4;
+    -webkit-order: 4;
+    order: 4;
+  }
+  .order-xxs-3 {
+    -ms-flex-order: 3;
+    -webkit-order: 3;
+    order: 3;
+  }
+  .order-xxs-2 {
+    -ms-flex-order: 2;
+    -webkit-order: 2;
+    order: 2;
+  }
+  .order-xxs-1 {
+    -ms-flex-order: 1;
+    -webkit-order: 1;
+    order: 1;
+  }
+  .order-xxs-0 {
+    -ms-flex-order: 0;
+    -webkit-order: 0;
+    order: 0;
+  }
 }
 
 @media only screen and (min-width: 576px) {
@@ -960,6 +1096,57 @@
 .offset-1 {
   margin-left: 8.33333333%;
   *margin-left: 8.23333333%;
+}
+
+@media only screen and (min-width: 0) {
+  .offset-xxs-11 {
+    margin-left: 91.66666667%;
+    *margin-left: 91.56666667%;
+  }
+  .offset-xxs-10 {
+    margin-left: 83.33333333%;
+    *margin-left: 83.23333333%;
+  }
+  .offset-xxs-9 {
+    margin-left: 75%;
+    *margin-left: 74.9%;
+  }
+  .offset-xxs-8 {
+    margin-left: 66.66666667%;
+    *margin-left: 66.56666667%;
+  }
+  .offset-xxs-7 {
+    margin-left: 58.33333333%;
+    *margin-left: 58.23333333%;
+  }
+  .offset-xxs-6 {
+    margin-left: 50%;
+    *margin-left: 49.9%;
+  }
+  .offset-xxs-5 {
+    margin-left: 41.66666667%;
+    *margin-left: 41.56666667%;
+  }
+  .offset-xxs-4 {
+    margin-left: 33.33333333%;
+    *margin-left: 33.23333333%;
+  }
+  .offset-xxs-3 {
+    margin-left: 25%;
+    *margin-left: 24.9%;
+  }
+  .offset-xxs-2 {
+    margin-left: 16.66666667%;
+    *margin-left: 16.56666667%;
+  }
+  .offset-xxs-1 {
+    margin-left: 8.33333333%;
+    *margin-left: 8.23333333%;
+  }
+  .offset-xxs-0 {
+    margin-left: 0;
+    *margin-left: -0.1%;
+  }
 }
 
 @media only screen and (min-width: 576px) {
@@ -1512,6 +1699,12 @@
 
 .hidden {
   display: none;
+}
+
+@media only screen and (min-width: 0) {
+  .hidden-xxs {
+    display: none;
+  }
 }
 
 @media only screen and (min-width: 576px) {
